# Modern-Aerospace-Propulsion

./: .gitignore  Aircraft_Propulsion_System_Design_Project.ipynb  Altitude_vs_Mach_Number.ipynb  Cycle_Analysis.ipynb  Cylinder_Blowdown.ipynb  FFSC_OPTIMIZATION_README.md  FFSC_Optimization_Example.ipynb  Homework_2_Turbojet_Optimization.ipynb  Inlet_Model.ipynb  LICENSE  MANIFEST.in  README.md  RocketPerformance.ipynb  Shock_Tube_Model.ipynb  Thermodynamics_of_Gases.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: README.md  (+1 more)
Aircraft Project Tools/: Aircraft_Propulsion_System_Design_Project.ipynb
CFD/: SU2Case.py
Homework Solutions/: Homework_1_Fundamental_Principles.ipynb  Homework_2_Turbojet_Optimization.ipynb
Week 01 - Introduction/: Shock_Tube_Model.ipynb
Week 02 - Fundamental Principles/: Thermodynamics_of_Gases.ipynb
Week 04 - Inlets & Nozzles/: Inlet_Model.ipynb
Week 05 - Combustors & Augmentors/: Gibbs_Energy_Minimization.ipynb  Homework_2_Combustors_&_Augementors.ipynb
Week 06 - Turbomachinery/: Gas_Turbine_T4_Performance_Sensitivity.ipynb  Polytropic_&_Isentropic_Efficiency.ipynb
Week 07 - Advanced Cycles/: SimpleTurboFan.ipynb
Week 09 - Introduction to Rockets/: LaunchTrajectoryAnalysis.ipynb  RocketPerformance.ipynb
Week 1 - Introduction/: Altitude_vs_Mach_Number.ipynb  Cylinder_Blowdown.ipynb
Week 11 - Liquid Rocket Systems & Components/: LiquidRocketDesign.ipynb  test.tex
Week 11 - Nozzle Design & Cooling, Braking, Advanced Concepts/: LiquidRocketDesign.ipynb
Week 3 - Cycle Analysis/: Cycle_Analysis.ipynb
(+42 files in other folders)
